--- a/package.json
+++ b/package.json
@@ -9,21 +9,27 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.12.1",
     "@nuxt/fonts": "^0.12.1",
     "@nuxt/icon": "^2.1.1",
     "@vuepic/vue-datepicker": "^12.1.0",
+    "drizzle-orm": "^0.45.1",
     "eslint": "^9.39.2",
     "modern-normalize": "^3.0.1",
     "nuxt": "^4.2.2",
+    "postgres": "^3.4.8",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.8",
     "sass": "^1.97.1",
     "typescript": "^5.9.3"
   }
