--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "seed:user": "npx tsx --env-file=.env server/db/userSeeder.ts"
   },
   "dependencies": {
+    "@bhplugin/vue3-datatable": "^2.0.2",
     "@nuxt/eslint": "^1.12.1",
     "@nuxt/fonts": "^0.12.1",
     "@nuxt/icon": "^2.1.1",
     "@vuepic/vue-datepicker": "^12.1.0",
+    "bcrypt": "^6.0.0",
     "drizzle-orm": "^0.45.1",
     "eslint": "^9.39.2",
     "modern-normalize": "^3.0.1",
@@ -27,9 +30,11 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^25.0.3",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.8",
+    "drizzle-seed": "^0.3.1",
     "sass": "^1.97.1",
     "typescript": "^5.9.3"
   }
