--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
   "eslint.useFlatConfig": true,
   "eslint.workingDirectories": [
     { "mode": "auto" }
-  ]
+  ],
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
