--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vueuse/nuxt": "^14.1.0",
     "bcrypt": "^6.0.0",
     "drizzle-orm": "^0.45.1",
+    "html-to-image": "^1.11.13",
     "modern-normalize": "^3.0.1",
     "nuxt": "^4.2.2",
     "postgres": "^3.4.8",
